<resources>
    <string name="app_name">MyApartment</string>

    <string name="label_username">username : </string>
    <string name="label_password">password : </string>
    <string name="label_login">Login</string>
    <string name="label_alert">ประกาศ</string>
    <string name="label_rule">กฏระเบียบ</string>

    <string name="label_room">หอพัก</string>
    <string name="label_main_page">หน้าหลัก</string>
    <string name="label_status_room">สถานะห้อง</string>
    <string name="label_dashboard_page">Dashboard</string>
    <string name="label_logout">ออกจากระบบ</string>

    <string name="label_payment">แจ้งค่าชำระ</string>
    <string name="label_my_room">ห้องของฉัน</string>
    <string name="label_alert_exit">แจ้งย้ายออก</string>

    <string name="label_back">ย้อนกลับ</string>
    <string name="label_title_room">ห้อง</string>

    <string name="label_title_name">ชื่อ - นามสกุล : </string>
    <string name="label_title_address">ที่อยู่หอพัก : </string>
    <string name="label_tel_number">เบอร์โทรศัพท์ : </string>
    <string name="label_title_tel">ติดต่อหอพัก : </string>
    <string name="label_id_card">บัตรประชาชน : </string>

    <string name="label_title_date_payment">ยอดชำระของวันที่ : </string>
    <string name="label_title_room_price">ค่าห้อง : </string>
    <string name="label_title_water_price">ค่าน้ำ 20 บาท %1$s หน่วย : </string>
    <string name="label_title_electric_price">ค่าไฟ 5 บาท %1$s หน่วย : </string>
    <string name="label_price">%1$s บาท</string>
    <string name="label_title_overdue_price">ยอดค้างชำระ : </string>
    <string name="label_title_sum_price">รวม : </string>
    <string name="label_title_exit_data">วันที่ต้องการย้ายออก : </string>
    <string name="label_title_product_price">ราคาสินค้าภายในห้อง</string>

    <string name="label_confirm_exit">ยืนยันแจ้งย้ายออก</string>

    <string name="btn_confirm">ตกลง</string>
    <string name="btn_cancel">ยกเลิก</string>
    <string name="btn_save">บันทึก</string>
    <string name="btn_edit">แก้ไข</string>
    <string name="btn_cancel_contact">ยกเลิกสัญญา / ย้ายออก</string>
    <string name="btn_confirm_payment">ชำระเงินเรียบร้อย</string>

    <string name="label_check_login">รหัสผ่านผิด</string>
    <string name="label_check_room_status">ห้องพักว่าง</string>
    <string name="label_address_tel">ติดต่อหอพัก\n%1$s</string>

    <string name="label_have_not_payment">ไม่มียอดค้างชำระ</string>
    <string name="label_please_select_date">กรุณาเลือกวันที่</string>
    <string name="label_noti_exit_room">แจ้งย้ายออกสำเร็จ</string>

    <string name="alert_save_success">บันทึกเรียบร้อย</string>
    <string name="alert_save_fail">บันทึกไม่สำเร็จ</string>

    <string name="label_room_number">ห้อง : %1$s</string>
    <string name="label_room_empty">ว่าง</string>
    <string name="label_room_not_empty">ไม่ว่าง</string>
    <string name="label_announce_exit">แจ้งออก : %1$s</string>
    <string name="label_over_due_date">ค้างชำระ</string>

    <string name="label_empty_status_room">ห้องว่าง\n(%1$s)</string>
    <string name="label_overdue_status">ค้างชำระ\n(%1$s)</string>
    <string name="label_exit_status">สถานะย้ายออก\n(%1$s)</string>

    <string name="label_no_tenant">ไม่มีผู้เช่า</string>
    <string name="title_activity_payment">PaymentActivity</string>

    <string name="label_date_pay">ยอดชำระของวันที่ : </string>
    <string name="label_price_room">ค่าห้อง</string>
    <string name="label_price_water">ค่าน้ำ 20 บาท</string>
    <string name="label_sum_water">รวมค่าน้ำ</string>
    <string name="label_price_electric">ค่าไฟ 5 บาท</string>
    <string name="label_sum_electric">รวมค่าไฟ</string>
    <string name="label_price_overdue">ยอดค้างชำระ</string>
    <string name="label_price_sum">รวม</string>
    <string name="label_point">หน่วย</string>
    <string name="label_overdue_payment">(ค้างชำระ)</string>

    <string name="btn_upload">Upload</string>
    <string name="label_upload">สัญญาเช่า</string>

    <string name="message_exit_room">ต้องการลบข้อมูลห้อง %1$s ?</string>
    <string name="alert_delete_success">ยกเลิกสัญญาเรียบร้อย</string>

    <string name="alert_contract_room_success">อัพโหลดสำเร็จ</string>
    <string name="alert_contract_room_fail">อัพโหลดไม่สำเร็จ</string>

    <string name="label_all_payment">รายรับทั้งหมด</string>
    <string name="label_sum_income">รวมรายรับ : %1$s บาท</string>
    <string name="label_sum_water_expenses">ค่าน้ำที่จ่าย : %1$s บาท</string>
    <string name="label_sum_electric_expenses">ค่าไฟที่จ่าย : %1$s บาท</string>
    <string name="label_net_income">รายได้สุทธิ : %1$s บาท</string>

    <string name="label_income_pie">รวมรายรับ\n%1$s บาท</string>
    <string name="label_water_expenses_pie">ค่าน้ำที่จ่าย\n%1$s บาท</string>
    <string name="label_electric_expenses_pie">ค่าไฟที่จ่าย\n%1$s บาท</string>

    <array name="month">
        <item>มกราคม</item>
        <item>กุมภาพันธ์</item>
        <item>มีนาคม</item>
        <item>เมษายน</item>
        <item>พฤษภาคม</item>
        <item>มิถุนายน</item>
        <item>กรกฎาคม</item>
        <item>สิงหาคม</item>
        <item>กันยายน</item>
        <item>ตุลาคม</item>
        <item>พฤศจิกายน</item>
        <item>ธันวาคม</item>
    </array>

</resources>