<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_20dp"
    tools:context=".view.admin.dashboard.DashboardFragment">

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/picChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideLineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineCenter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAllPayment"
        style="@style/text_18sp_black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/layoutSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideLineCenter"
        tools:text="@string/label_all_payment" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/layoutIncome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAllPayment">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner"
            style="@style/text_18sp_black"
            android:layout_width="250dp"
            android:layout_height="41dp"
            android:background="@drawable/bg_spinner"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_10dp"
            android:src="@drawable/ic_drop_down"
            app:layout_constraintBottom_toBottomOf="@+id/spinner"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="@+id/spinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_10dp"
        android:background="@drawable/bg_edit_text"
        android:padding="@dimen/padding_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSpinner">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSumIncome"
            style="@style/text_18sp_black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tvSumWater"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/label_sum_income" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSumWater"
            style="@style/text_18sp_black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10dp"
            app:layout_constraintBottom_toTopOf="@+id/tvSumElectric"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSumIncome"
            tools:text="@string/label_sum_water_expenses" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSumElectric"
            style="@style/text_18sp_black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10dp"
            app:layout_constraintBottom_toTopOf="@+id/tvNetIncome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSumWater"
            tools:text="@string/label_sum_electric_expenses" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNetIncome"
            style="@style/text_18sp_black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSumElectric"
            tools:text="@string/label_net_income" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>